sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
var x=getMondeLargeur()
for(i<- 0 to x-2){
	if (getValeur(i)<getValeur(i+1)){
		echange(i,i+1)
	}
}
}
